--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,13 @@
   height: 100%;
   margin: 0;
 }
+
+.selectedTab{
+  border-left: 4px black solid;
+}
+@media screen and (max-width:800px) {
+  .selectedTab{
+    border-bottom: 4px black solid;
+    border-left: 0px;
+  }
+}
